--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ Assets/Example Avatar - USED FOR MATE ENGINE
 ProjectSettings/Packages
 UserSettings/Layouts
 uWindowCapture.log
+
+# External native libraries - build them by yourself
+Assets/MATE ENGINE - Packages/StandaloneFileBrowser/Plugins/Linux/x86_64/
