--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AtkSharp" version="3.24.24.95" />
+  <package id="CairoSharp" version="3.24.24.95" />
+  <package id="GLibSharp" version="3.24.24.95" />
+  <package id="GdkSharp" version="3.24.24.95" />
+  <package id="GioSharp" version="3.24.24.95" />
+  <package id="GirCore.Gdk-4.0" version="0.6.3" manuallyInstalled="true" />
+  <package id="GtkSharp" version="3.24.24.95" manuallyInstalled="true" />
   <package id="Newtonsoft.Json" version="13.0.3" manuallyInstalled="true" />
+  <package id="PangoSharp" version="3.24.24.95" />
   <package id="System.Security.AccessControl" version="4.7.0" />
   <package id="System.Security.Principal.Windows" version="4.7.0" />
   <package id="Tomlyn" version="0.19.0" manuallyInstalled="true" />
