--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -9,7 +9,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"picker_window_position_offset.075BCD15" = "-32;450;518;550"
+	"picker_window_position_offset.075BCD15" = "-67;237;518;550"
 	"picker_visibility_flags.075BCD15" = "264"
 	"picker_item_size.075BCD15" = "31"
 	"picker_inspector.075BCD15" = "0"
@@ -85,6 +85,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"manage n"
 	"st: sakur"
 	"st: retro"
 	"st: INPUT_AI_SYSTEM_PROMP"
@@ -104,7 +105,6 @@ recentSearches = [
 	"st: language"
 	"st: finish"
 	"st: LANGUAGE"
-	"st: d"
 ]
 searchItemFavorites = [
 ]
