--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ uWindowCapture.log
 
 # External native libraries - build them by yourself
 Assets/MATE\ ENGINE\ -\ Packages/StandaloneFileBrowser/Plugins/Linux/x86_64/
+Assets/MATE\ ENGINE\ -\ Packages/StandaloneFileBrowser/Plugins/Linux/x86_64.meta
